--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,19 @@
-:root{
-    --joyLeft:rgb(255, 60, 40);
-    --joyRight:rgb(10, 185, 230);
+:root {
+    --joyLeft: rgb(255, 60, 40);
+    --joyRight: rgb(10, 185, 230);
     --black: #000000;
-    -greyScren:#727272;
-    -greybutton:#3c3c3c;
+    --greyScren: #727272;
+    --greybutton: #3c3c3c;
 }
-html{
-    font-size: 62.5% ;
+
+html {
+    font-size: 62.5%;
 }
-body{
+
+body {
     font-size: 16px;
 }
+
 
 /* img {
     width: 33rem;
@@ -18,8 +21,99 @@ body{
 } */
 
 
-
 /*Global*/
+
 img {
     border: 2rem black solid;
+}
+
+.conteiner {
+    margin: 0 auto;
+}
+
+.displey__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+}
+
+@media (min-width: 768px) {
+    .displey__grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+/*pantallas*/
+
+.screen {
+    width: 70rem;
+    height: 35rem;
+    grid-column: 2/3;
+}
+
+
+/* @media (min-width: 768px) {
+    .screen {
+        width: 20rem;
+        height: 10rem;
+    }
+} */
+
+@media (min-width: 768px) {
+    .screen {
+        width: 86rem;
+        height: 43rem;
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+}
+
+
+/*JoyCons*/
+
+.joycon__tamaño {
+    height: 46.8rem;
+    width: 12.4rem;
+}
+
+.joycon__tamaño--center {
+    height: 46rem;
+    display: flex;
+    align-items: center;
+    background-color: var(--greybutton);
+}
+
+.joycon__center--img {
+    margin: 0 auto;
+    width: 13rem;
+}
+
+.joycon__izq {
+    background-color: var(--joyLeft);
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.joycon__dch {
+    background-color: var(--joyRight);
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+@media (min-width: 768px) {
+    .joycon__izq {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .joycon__dch {
+        grid-column: 3/4;
+        grid-row: 1/2;
+    }
+    /* .joycon__tamaño--center {
+        height: 46.8rem;
+        width: 12.4rem;
+        background-color: var(--black);
+        grid-row: 1/2;
+    } */
 }
