--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,16 @@
     --black: #000000;
     --greyScren: #727272;
     --greybutton: #3c3c3c;
-} 
+}
 
 html {
     font-size: 62.5%;
     box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
 
@@ -28,11 +30,28 @@ body {
 
 /*Global*/
 
-/*
 .conteiner {
+    max-width: 120rem;
     margin: 0 auto;
 }
 
+.no__padding {
+    padding: 0;
+}
+
+.no__margin {
+    margin: 0;
+}
+
+.consola__todo {
+    display: flex;
+    justify-content: center;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+}
+
+
+/*
 .displey__grid {
     display: grid;
     grid-template-columns: repeat(2, 2fr);
@@ -47,12 +66,17 @@ body {
 
 
 /*pantallas*/
+
 .screen {
-    border: 2rem black solid;
+    border: 3rem black solid;
+    width: 97rem;
+    height: 58rem;
 }
+
+
 /* .screen {
-    width: 70rem;
-    height: 35rem;
+    width: 97rem;
+    height: 58rem;
     grid-column: 2/3;
 } */
 
@@ -63,6 +87,7 @@ body {
         height: 10rem;
     }
 } */
+
 
 /* @media (min-width: 768px) {
     .screen {
@@ -76,11 +101,13 @@ body {
 
 /*JoyCons*/
 
-/* .joycon__tamaño {
-    height: 46.8rem;
-    width: 12.4rem;
+.joycon__tamaño {
+    width: 20.7rem;
+    height: 58rem;
 }
 
+
+/*
 .joycon__tamaño--center {
     height: 46rem;
     display: flex;
@@ -92,18 +119,21 @@ body {
     margin: 0 auto;
     width: 13rem;
 }
+.*/
 
 .joycon__izq {
     background-color: var(--joyLeft);
-    grid-column: 1/2;
-    grid-row: 2/3;
+    border-bottom-left-radius: 10rem;
+    border-top-left-radius: 10rem;
 }
 
 .joycon__dch {
     background-color: var(--joyRight);
-    grid-column: 2/3;
-    grid-row: 2/3;
+    border-bottom-right-radius: 10rem;
+    border-top-right-radius: 10rem;
 }
+
+
 /*
 @media (min-width: 768px) {
     .joycon__izq {
@@ -114,10 +144,54 @@ body {
         grid-column: 3/4;
         grid-row: 1/2;
     } */
-    /* .joycon__tamaño--center {
+
+
+/* .joycon__tamaño--center {
         height: 46.8rem;
         width: 12.4rem;
         background-color: var(--black);
         grid-row: 1/2;
     } 
 } */
+
+
+/*botones*/
+
+.botones {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.botones__boton {
+    background-color: transparent;
+    grid-column: 3 / 4;
+}
+
+.boton--pad {
+    grid-column: 1 / 4;
+    grid-row: 2 / 4;
+}
+
+.boton--flecha1 {
+    grid-column: 2 / 3;
+}
+
+.boton--flecha2 {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+}
+
+.boton--flecha3 {
+    grid-column: 3 / 4;
+    grid-row: 5 / 6;
+}
+
+.boton--flecha4 {
+    grid-column: 2 / 3;
+    grid-row: 6 / 7;
+}
+
+.boton--encendido {
+    grid-column: 3 / 4;
+    grid-row: 7 / 8;
+}
