--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,13 @@ body {
     margin-bottom: 10rem;
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: .01rem;
+    row-gap: .01rem;
+}
+
 
 /*
 .displey__grid {
@@ -106,6 +113,18 @@ body {
     height: 58rem;
 }
 
+.joycon__izq {
+    background-color: var(--joyLeft);
+    border-bottom-left-radius: 10rem;
+    border-top-left-radius: 10rem;
+}
+
+.joycon__dch {
+    background-color: var(--joyRight);
+    border-bottom-right-radius: 10rem;
+    border-top-right-radius: 10rem;
+}
+
 
 /*
 .joycon__tamaño--center {
@@ -120,18 +139,6 @@ body {
     width: 13rem;
 }
 .*/
-
-.joycon__izq {
-    background-color: var(--joyLeft);
-    border-bottom-left-radius: 10rem;
-    border-top-left-radius: 10rem;
-}
-
-.joycon__dch {
-    background-color: var(--joyRight);
-    border-bottom-right-radius: 10rem;
-    border-top-right-radius: 10rem;
-}
 
 
 /*
@@ -166,46 +173,118 @@ body {
     background-color: transparent;
     border: none;
     cursor: pointer;
+}
+
+.boton__minus {
     grid-column: 3 / 4;
 }
 
-.boton--pad {
-    background-color: var(--black);
-    width: 10rem;
-    height: 10rem;
-    margin: auto;
-    border-radius: 50%;
-    grid-column: 1 / 4;
-    grid-row: 2 / 4;
-}
-
-.boton--flecha1 {
-    grid-column: 2 / 3;
-}
-
-.boton--flecha2 {
+.boton__plus {
     grid-column: 1 / 2;
-    grid-row: 5 / 6;
 }
 
-.boton--flecha3 {
-    grid-column: 3 / 4;
-    grid-row: 5 / 6;
+.minus--img,
+.plus--img {
+    width: 3.9rem;
 }
 
-.boton--flecha4 {
+.minus--img {
+    margin-right: 1.5rem;
+}
+
+.plus--img {
+    margin-left: 2rem;
+}
+
+.boton__pad {
+    grid-column: 1 / 4;
+    grid-row: 2 / 3;
+}
+
+.boton__pad--left {
+    grid-column: 1 / 4;
+}
+
+.pad {
+    background-color: var(--black);
+    border-radius: 50%;
+    width: 8rem;
+    height: 8rem;
+    margin: 0 auto;
+}
+
+.colocacion__joycon--flechas {
     grid-column: 2 / 3;
-    grid-row: 6 / 7;
+    grid-row: 3 / 4;
 }
 
-.boton--encendido {
-    grid-column: 3 / 4;
-    grid-row: 7 / 8;
+.colocacion__joycon--flechas--left {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
 }
 
 .joystick__up,
 .joystick__left,
 .joystick__right,
 .joystick__down {
-    width: 5rem;
+    width: 3rem;
+    background-color: var(--black);
+    border-radius: 50%;
 }
+
+.joystick__up:active,
+.joystick__down:active,
+.joystick__left:active,
+.joystick__right:active,
+.boton__home:active {
+    background-color: greenyellow;
+}
+
+.boton--flecha1 {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+}
+
+.boton--flecha2 {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+}
+
+.boton--flecha3 {
+    grid-row: 2 / 3;
+    grid-column: 3 / 4;
+}
+
+.boton--flecha4 {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+}
+
+.boton--encendido {
+    grid-column: 3 / 4;
+    grid-row: 4 / 5;
+}
+
+
+/* .boton--encendido--left {
+    margin-left: .5rem;
+} */
+
+.boton__home,
+.encendido__img {
+    width: 3rem;
+    padding: .1rem;
+    background-color: var(--greybutton);
+    border: .2rem var(--black) solid;
+}
+
+
+/*este codigo es opcional 
+.encendido__img {
+    margin-right: 2rem;
+} */
+
+
+/*.boton__home{
+    margin-left:2rem;
+}*/
